--- a/less/popup.less
+++ b/less/popup.less
@@ -1538,12 +1538,23 @@ div.ins_tabs.more_ins{
                         box-sizing: border-box;;
                         padding-left: 15px;
                     }
+                    select{
+                        background-image: url(../img/popup/select_bg.png);
+                        .backgroundOption;
+                        background-size: 12px;
+                        background-position-x: 95%; 
+                    }
                     
                 }
                 li.phones{
                     select{
                         width: 35%;
                         float: left;
+                        background-image: url(../img/popup/select_bg.png);
+                        .backgroundOption;
+                        background-size: 12px;
+                        background-position-x: 95%;
+
                     }
                     input{
                         width: 63%;
