--- a/less/common.less
+++ b/less/common.less
@@ -399,7 +399,10 @@ div#wrap{
             width: 100%;
             height: 90px;
             line-height: 90px;
-            border-bottom: 1px solid lightgray;    
+            border-bottom: 1px solid lightgray;
+            border-top: 1px solid lightgray;    
+            padding-top: 25px;
+            box-sizing: border-box;;
             div.wrap{
                 .wraps;
                 max-width: 1200px;
