--- a/less/mo_style.less
+++ b/less/mo_style.less
@@ -753,7 +753,10 @@ div#wrap {
                             opacity: 0.0;
                         }
                         @media@mediaVericalMobile{
+                            cursor: pointer;
+                            position: relative;
                             display: block;
+                            z-index: 888;
                         }
 
 
