--- a/less/mo_style.less
+++ b/less/mo_style.less
@@ -1,6 +1,8 @@
 @mainColor: #ec6647;
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
+select{
+    background: white;
+}
 
 html,
 body {
