--- a/less/style_main.less
+++ b/less/style_main.less
@@ -1556,6 +1556,9 @@ body {
             text-align: center;
             padding-top: 100px;
             box-sizing: border-box;;
+            img.figure{
+                display: none;
+            }
             h2{
                 font-size: 3.125rem;;
                 font-weight: bold;
