--- a/css/mo_style_main.css
+++ b/css/mo_style_main.css
@@ -2905,7 +2905,7 @@ body {
   height: 80px;
 }
 #wrap main.page6 div.page6-section2 div.page6-table4 .colum2 {
-  width: 960px!important;
+  width: 80%;
   border: 0px;
 }
 #wrap main.page6 div.page6-section2 div.page6-table5 {
