--- a/less/mo_style_main.less
+++ b/less/mo_style_main.less
@@ -3105,7 +3105,7 @@ body {
                     height: 80px;
                 }
                 .colum2{
-                    width: 960px!important;
+                    width: 80%;
                     border: 0px;
                 }
             }
