--- a/css/style_main.css
+++ b/css/style_main.css
@@ -2129,3 +2129,37 @@ body {
 #wrap main.page6 div.page6-section3 div.bottom_tables div.right_table {
   float: right;
 }
+#wrap section.mode_ins_zoom div.wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 360px;
+}
+#wrap section.mode_ins_zoom div.wrap ul {
+  text-align: center;
+}
+#wrap section.mode_ins_zoom div.wrap ul li {
+  position: relative;
+  display: inline-block;
+  width: 180px;
+  height: 100px;
+  background: white;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  vertical-align: bottom;
+  padding: 20px;
+  box-sizing: border-box;
+}
+#wrap section.mode_ins_zoom div.wrap ul li img {
+  height: 25px;
+}
+#wrap section.mode_ins_zoom div.wrap ul li p {
+  width: 70%;
+  position: absolute;
+  font-size: 0.75rem;
+  word-break: keep-all;
+  line-height: 1rem;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+}
