--- a/less/style_main.less
+++ b/less/style_main.less
@@ -2456,4 +2456,41 @@ body {
             }
         }
     }
+
+    section.mode_ins_zoom{
+        div.wrap{
+            max-width: 1200px;
+            margin: 0 auto;
+            height: 360px;
+            ul{
+                text-align: center;
+                li{
+                    position: relative;
+                    display:inline-block;
+                    width: 180px;
+                    height: 100px;
+                    background: white;
+                    border-radius: 5px;
+                    margin-right: 5px;
+                    margin-left: 5px;
+                    vertical-align: bottom;
+                    padding: 20px;
+                    box-sizing: border-box;
+                    img{
+                        height: 25px;
+                    }
+                    p{
+                        width: 70%;
+                        position: absolute;
+                        font-size: 0.75rem;
+                        word-break: keep-all;
+                        line-height: 1rem;
+                        top: 50px;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+                }
+            }
+        }
+    }
 }
